* Added remoteaccesscontroller.py and a new ractl CLI command for easy execution
* Added an export/import script to help migrate assets between CONS3RT sites
* Improved the asset import/update CLI logic, and added the "asset updateonly" subcommand
* Added the option to pass --id to the "asset update" command (e.g. asset update --id=12345)

0.0.9
=====

* Removed GPU from template registraiton/subscription to react to CONS3Rt changes
* Added the s3organizer CLI command and tool for helping organize, move, and delete items in S3 buckets
* Added logic for finding and deleting orphan snapshots in AWS accounts
* Added the ability to create and update IAM roles and policies
* Added the ability to generate STS login tokens with or without MFA when assuming roles in other accounts
* Added the deployment subcommand: cons3rt deployment list, or cons3rt deployment run list/delete/release
* Added a module for encryption/decrption with ansible-vault
* Added the `asset download --id=ASSET_ID` command to easily download assets from the CLI

0.0.8
=====

* Added CLI calls to power on/off runs, and corresponding methods
* Added an option to keep the asset zip files after import/update
* Added ssh.scp_file method for getting and putting files over SSH using paramiko and scp
* Added route53 util for creating public/private hosted zones and adding/deleting DNS records
* Added a --keep flag for the asset command, to keep the asset zip after import, and added project to the asset_data.yml that gets saved on import/update into a site
* Added methods to the Deployment class to return a boolean if the deployment is in AWS, Azure, Openstack, or VCloud
* Added StsUtil and StsUtilError classes, to get informationa about the AWS caller
* Added red-hat as a possible name for Red Hat templates when auto-configuring
* Added the beginning of a multi-site config file for Cons3rtApi

0.0.7
=====
